# cpp-sudoku

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_async.cpp
clever-solver/: CMakeLists.txt  Makefile  README.md
clever-solver/src/: clever_solver.cpp  clever_solver.hpp  exceptions.hpp  main.cpp  utils.hpp
simple-solver/: CMakeLists.txt
simple-solver/src/: test_speed.cpp  utils.hpp
solver/: cell.cpp  cell.hpp  errors.cpp  errors.hpp  format.cpp  format.hpp  main.cpp  solver.cpp  solver.hpp  test_speed.cpp  value.cpp  value.hpp
src/: cell.cpp  cell.hpp  clever_solver.cpp  clever_solver.hpp  data_dirs.cpp  data_dirs.hpp  exceptions.hpp  generator.cpp  generator.hpp  main.cpp  reducer.cpp  reducer.hpp  run_generator.cpp  run_generator.hpp  run_reducer.cpp  run_reducer.hpp  simple_solver.cpp  simple_solver.hpp  utils.cpp  utils.hpp
src/exception/: ComplexityLimitException.hpp  MultipleSolutionsException.hpp  NoSolutionException.hpp  TimeLimitException.hpp
src/generator/: Generator.cpp  Generator.hpp  Reducer.cpp  Reducer.hpp
src/main/: DataDirs.cpp  DataDirs.hpp  RunGenerator.cpp  RunSolver.cpp
src/solver/: Solver.cpp  Solver.hpp
src/test/: test_clever_solver.cpp  test_reducer.cpp
src/util/: FileUtils.cpp  FileUtils.hpp  SudokuUtils.cpp  SudokuUtils.hpp
test/: TestFramework.hpp
test/generator/: ReducerTest.cpp
test/solver/: SolverTest.cpp
